--- a/index3.html
+++ b/index3.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style3.css"/>
 <title></title>
 <body>
 <header>
