--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <a href="">відгуки </a>
     </nav>
     <div class="button">
-    <button>основний сайт</button>
+    <button onclick="window.location.href='https://htmluser2.github.io/two/';">основний сайт</button>
     <button>докладніше</button>
 </div>
  <h1>Магазин</h1> 
