--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="style3.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 <title></title>
 <body>
 <header>
@@ -9,8 +9,8 @@
  <a href="">відгуки </a>
     </nav>
     <div class="button">
-    <button onclick="window.location.href='https://htmluser2.github.io/two/';">основний сайт</button>
-    <button>докладніше</button>
+   <a href="https://htmluser2.github.io/two/"> <button>основний сайт</button></a>
+    <a href="#about"><button>докладніше</button></a>
 </div>
  <h1>Магазин</h1> 
 </header>
@@ -43,7 +43,7 @@
 <h1 class="footer">місто Харків вул. Сумська 60</h1>
 <h1 class="footer">місто Львів вул. Богдана Хмельницького 14</h1>
 
-<footer>
+<footer id="about">
         <div class="foot">
             <p>Номер телефону: (063)-174-96-23 <img style="margin-left: 20%;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" width="50px"/>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png" width="50px"/>
