--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="style3.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 <title></title>
 <body>
 <header>
@@ -10,7 +10,8 @@
     </nav>
     <div class="button">
    <a href="https://htmluser2.github.io/two/"> <button>основний сайт</button></a>
-    <a href="#about"><button>докладніше</button></a>
+    <a href="#about"><button>ще більше ігор</button></a>
+     <a href="  https://htmluser2.github.io/one/"><button>докладніше</button></a>
 </div>
  <h1>Магазин</h1> 
 </header>
