--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </nav>
     <div class="button">
    <a href="https://htmluser2.github.io/two/"> <button>основний сайт</button></a>
-    <a href="#about"><button>ще більше ігор</button></a>
-     <a href="  https://htmluser2.github.io/one/"><button>докладніше</button></a>
+    <a href="  https://htmluser2.github.io/one/"><button>ще більше ігор</button></a>
+     <a href="#about"><button>докладніше</button></a>
 </div>
  <h1>Магазин</h1> 
 </header>
